text wrap fix for multiselects (#576)

--- a/app/styles/inputs.less
+++ b/app/styles/inputs.less
@@ -127,6 +127,9 @@ textarea {
 
 .multiselect__element {
   font-size: 13px;
+  white-space: nowrap;
+  display: inline-block;
+  min-width: 100%;
 }
 
 .multiselect__option {
